--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ nav {
 }
 
 .nav-tab:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: black;
 }
 
 .nav-tab.active {
